--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>second repo</title>
 </head>
 <body>
-    
+    <h1>Can use Github slightly.</h1>
+    <h2>Sending my work.</h2>
 </body>
 </html>
