--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Can use Github slightly.</h1>
     <h2>Sending my work.</h2>
+    <p>Further testing.</p>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
