--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Can use Github slightly.</h1>
-    <h2>Sending my work.</h2>
+    <h2>Sending my work.com</h2>
     <p>Further testing.</p>
+    <img src="Capture.PNG" alt="">
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
